--- a/_config.yml
+++ b/_config.yml
@@ -2,24 +2,22 @@
 gems:
   - jemoji
   - jekyll-paginate
-  - jekyll-latex
-  - jekyll-katex
 
 # Site settings
-title: "Luis WebSite"
+title: "Mediator"
 description: > # this means to ignore newlines until "email:"
-   Research interest and others
+   A Jekyll theme - Medium inspired
 
-email: luisvasquez@mail.mail
+email: a-mail@mail.mail
 #blog logo
-logo: "/assets/images/df_logo.png"
+logo: "/assets/images/df_logo.jpg"
 float_logo: true # true, false (default)
 
 # blog cover
-cover: "/assets/images/galaxy-3029806_1920.jpg"
+cover: "/assets/images/cA4aKEIPQrerBnp1yGHv_IMG_9534-3-2.jpg"
 
-name: 'Luis Vasquez'
-author: 'Luis Vasquez'
+name: 'Dirk Fabisch'
+author: 'Dirk Fabisch'
 author_image: "/assets/images/author.jpg"
 
 paginate:	5
@@ -27,7 +25,7 @@ paginate:	5
 url: "http://myblog.***.***" # the base hostname & protocol for your site
 baseurl: ""
 #used to display twitter cards
-#twitter_handle: '@dirkfabisch'
+twitter_handle: '@dirkfabisch'
 
 #fill in disqus shortname to use disqus
 #disqus: disqus-shortname
@@ -36,12 +34,12 @@ baseurl: ""
 
 # social icons and sharing options
 social:
-  - icon:	bitbucket
-    url:	https://bitbucket.org/apolionl
-    desc:	Fork me on Bitbucket
-    share_url: #http://twitter.com/share
-    share_title: #?text=
-    share_link: #"&amp;url="
+  - icon:	twitter
+    url:	https://twitter.com/dirkfabisch
+    desc: Follow me on twitter
+    share_url: http://twitter.com/share
+    share_title: ?text=
+    share_link: "&amp;url="
 
 #  - icon:	facebook
 #    url:	https://facebook.com/???
@@ -51,7 +49,7 @@ social:
 #    share_link: "&amp;u="
 
   - icon:	github
-    url:	https://github.com/apolionl
+    url:	https://github.com/dirkfabisch
     desc:	Fork me on github
     share_url:
     share_title:
