--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ gems:
   - jekyll-paginate
 
 # Site settings
-title: "Luis WebSite!!!!!!"
+title: "Luis WebSite!!"
 description: > # this means to ignore newlines until "email:"
    Research interest and others
 
