--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ gems:
   - jekyll-katex
 
 # Site settings
-title: "Luis WebSite!!!!"
+title: "Luis WebSite!"
 description: > # this means to ignore newlines until "email:"
    Research interest and others
 
